<resources>
    <string name="app_name">Mobio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_info_text">Мобио мобил иливасига хуш келиб сиз</string>
    <string name="phone_number">Телефон рақам</string>
    <string name="login">Логин</string>
    <string name="register">Регистер</string>
    <string name="password">Пароль</string>
    <string name="login_btn">Авторизация</string>
    <string name="register_btn">Рўйхатдан ўтиш</string>
    <string name="full_name">Тўлиқ исм фамилия</string>
    <string name="email">Эмаил</string>
    <string name="close">Ёпиш</string>
    <string name="loading">Кутинг...</string>
    <string name="cancel">Бекор қилиш</string>
    <string name="repeat">Қайта уруниш</string>
    <string name="multi_request">Сўровлар кўпайиб кетди илтимос кейинроқ уруниб кўринг</string>
    <string name="server_error">Сервер билан алоқа мавжуд эмас илтимос кейинроқ уруниб куринг</string>
    <string name="no_internet">Интернет билан уланиш мавжуд эмас илтимос интернетни текширинг</string>
    <string name="slow_internet">Интернет жуда секин</string>
    <string name="no_connect_internet">Интернет билан уланиш мавжуд эмас</string>

    <string name="menu_home">Асосий ойна</string>
    <string name="category">Бўлимлар</string>
    <string name="favorites">Севимлилар</string>
    <string name="questions">Кўп сўраладиган саволлар</string>
    <string name="privacy">Фойдаланиш шартлари</string>
    <string name="settings">Созламалар</string>
    <string name="search">Қидирув</string>
    <string name="basket">Сават</string>
    <string name="see_all">Барчасини кўриш</string>
    <string name="buy_now">Хозир сотиб олисh</string>
    <string name="pay_type">сўм</string>
    <string name="discount">Чегирма</string>
    <string name="summa">Нархи:</string>
    <string name="comment_text">та каментария</string>
    <string name="no_comment">Коментария мавжуд эмас</string>
    <string name="old_price">Олдинги нархи:</string>
    <string name="percent">Фоиз:</string>
    <string name="buy">Сотиб олиш</string>
    <string name="comment">Коммент қолдириш</string>
    <string name="search_text">Қидирув...</string>
    <string name="delete_basket">Махсулот саватдан ўчди</string>
    <string name="comment_title">Коммент қолдириш:</string>
    <string name="reade_more_text">Барчасини ўқиш</string>
    <string name="user_information">Фойдаланувчи малумотлари</string>
    <string name="uzb_lang">O\'zbek tili</string>
    <string name="uzb_lang_title">Ўзбек тили</string>
    <string name="ru_lang">Рус тили</string>
    <string name="crl_lang">Ўзбек тили</string>
    <string name="day_theme">Кундузги ҳолат</string>
    <string name="night_theme">Тунги ҳолат</string>
    <string name="info_application">Илова ҳақида</string>
    <string name="share_application">Иловани улашиш</string>
    <string name="money_history">Харажатлар тарихи</string>
    <string name="offerta">Оммавий офферта шартлари</string>
    <string name="info_company">Биз ҳақимизда</string>
    <string name="language_tv">Тилни танланг</string>
    <string name="logout">Аккоунтдан чиқиш</string>
    <string name="logout_text">Аккоунтдан чиқишни хохлайсизми?</string>
    <string name="accepted">Қабул қилиш</string>
    <string name="no_auth">Сиз рўйхатдан ўтмагансиз</string>
    <string name="auth_text">Рўйхатдан ўтиш</string>
    <string name="no_data">Малумот мавжуд эмас</string>
    <string name="check_language">Тилни танланг</string>
    <string name="save_lang">Тилни ўзгартириш</string>
    <string name="rate_text">Сизга кўрсатилган хизматлар бўйича бахо қўйинг?</string>
    <string name="save">Сақлаш</string>
    <string name="search_info">Қидирув бўлими</string>
    <string name="payment_screen">Тўлов ойнаси</string>

</resources>