<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/questions"
            android:icon="@drawable/ic_faq"
            android:title="@string/questions" />
        <item
            android:id="@+id/privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/settings" />
    </group>

</menu>