<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background_color"
    tools:context=".ui.auth.registerScreen.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0.1"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:hint="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        app:layout_constraintTop_toBottomOf="@id/textInput_name"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@android:color/transparent"
        app:prefixText="+998"
        app:prefixTextColor="@color/text_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:inputType="phone"
            android:maxLength="9"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_email"
        app:layout_constraintTop_toBottomOf="@id/textInput"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            app:startIconCheckable="true"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput1"
        app:layout_constraintTop_toBottomOf="@id/textInput_email"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            app:startIconCheckable="true"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="@id/textInput1"
        app:layout_constraintRight_toRightOf="@id/textInput1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:text="@string/register_btn"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:textSize="@dimen/_12sdp"
        android:enabled="false"
        android:textColor="@color/white"
        android:background="@drawable/btn_no_enabled"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>