<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/dialog_back"
        app:layout_constraintWidth_percent="0.95"
        android:layout_marginVertical="@dimen/_5sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/rate_text"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            app:lottie_rawRes="@raw/rate"
            app:lottie_loop="true"
            android:layout_marginTop="@dimen/_8sdp"
            app:lottie_autoPlay="true"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_80sdp"/>

        <uz.jamshid.library.ExactRatingBar
            android:id="@+id/rating_bar"
            app:starCount="5"
            app:isIndicator="false"
            app:starFillColor="@color/circle_progress_color"
            app:starSize="60"
            app:starValue="0"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress"
            android:layout_marginTop="@dimen/_8sdp"
            android:indeterminateTint="@color/circle_progress_color"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_weight="1"
                android:textStyle="normal"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:fontFamily="@font/inter_medium"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
                android:text="@string/save"
                android:textAllCaps="false"
                android:fontFamily="@font/inter_medium"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_3sdp"
                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>